# buildkit-python

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.ai/: ai-agents.md  configuration.md  dependency-injection.md  sql-decorators.md  testing.md
.ai/skills/: testing-guide.md
.github/workflows/: ci.yml  publish.yml
scripts/: smoke_test_package.py  workspace.py
